Fixed offsetLeft issue

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
     position: absolute;
 	width: 548px;
 	height: 472px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 	margin: 0 auto;
     left: 0;
     right: 0;
@@ -84,7 +84,8 @@ body {
 	transform-origin: center;
     border-radius: 100%;
     position: absolute;
-    top: -50px;
+		top: -50px;
+		left: 16px;
 }
 
 circle {
